--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             Add an item
           </label>
           <input type="text" placeholder="e.g., broccoli" id="newText">
-          <button class="agregar" type="submit">
+          <button class="agregar" type="submit" id="addButton">
             Add item
           </button>
       </form>
-      <ul class="Lista">
-      </ul>
+      <ul class="Lista" id="itemsList"></ul>
     </div>
     <script
     src="https://code.jquery.com/jquery-3.4.1.js"
